Smoothed out animations and fixed alert alignment issues.

--- a/dev/sass/particles/_basics.scss
+++ b/dev/sass/particles/_basics.scss
@@ -2,8 +2,8 @@ html, body {
   font-family: $font-family-primary;
 }
 
-.hide {
-  display:none;
+.displaynone {
+  display: none;
 }
 
 .text-right {
