--- a/dev/sass/particles/_general.scss
+++ b/dev/sass/particles/_general.scss
@@ -3,7 +3,7 @@
 #user-alert {
   padding: 20px;
   position: fixed;
-  left: 22%;
+  left: 26%;
   top: 30%;
   background-color: white;
   box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -15,6 +15,12 @@
   z-index: 100;
   width: 55%;
   max-width: 650px !important;
+  @include transition(opacity, 200ms, ease-in-out);
+  opacity: 1;
+  &.hide {
+    opacity: 0;
+    @include transition(opacity, 200ms, ease-in-out);
+  }
   i { @include font-size(26); }
 
   .close {
